@@ -366,6 +366,7 @@ plugins/subtitleformats/bitc/Makefile
 plugins/subtitleformats/microdvd/Makefile
 plugins/subtitleformats/mpl2/Makefile
 plugins/subtitleformats/mpsub/Makefile
+plugins/subtitleformats/sbv/Makefile
 plugins/subtitleformats/subrip/Makefile
 plugins/subtitleformats/substationalpha/Makefile
 plugins/subtitleformats/subtitleeditorproject/Makefile
