@@ -1,0 +1,7 @@
+[SubtitleEditor Extension]
+_Name=SBV
+_Description=SBV subtitles support.
+Categorie=subtitleformat
+Type=module
+Module=sbv
+Authors=kitone <kitone at gna dot org>
